samples/http-scaler-with-gloo/manifests/app.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      app: http-server
  template:
    metadata:
      labels:
        app: http-server
    spec:
      terminationGracePeriodSeconds: 1
      containers:
        - name: http-server
          image: ghcr.io/kedify/sample-http-server:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: http-server
  namespace: default
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: http-server
  type: ClusterIP
