samples/http-scaler-with-gloo/manifests/routetable.yaml
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: http-server
  namespace: default
spec:
  virtualHost:
    domains:
      - gloo-http.keda
    routes:
      - matchers:
          - prefix: /
        delegateAction:
          ref:
            name: http-server-routes
            namespace: default
