samples/http-scaler-with-gloo/manifests/upstream.yaml
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: http-server
  namespace: default
spec:
  virtualHost:
    domains:
      - gloo-http.keda
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            upstream:
              name: http-server-upstream
              namespace: default
