samples/http-scaler-with-gloo/manifests/virtualservice.yaml
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: http-server
  namespace: default
spec:
  virtualHost:
    domains:
      - gloo-http.keda
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            kube:
              ref:
                name: http-server
                namespace: default
              port: 8080
