samples/http-scaler-with-gloo/manifests/waiting-page-demo.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-server-waiting
  namespace: default
spec:
  replicas: 0
  selector:
    matchLabels:
      app: http-server-waiting
  template:
    metadata:
      labels:
        app: http-server-waiting
    spec:
      terminationGracePeriodSeconds: 1
      containers:
        - name: http-server
          image: ghcr.io/kedify/sample-http-server:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          readinessProbe:
            tcpSocket:
              port: http
            periodSeconds: 1
            timeoutSeconds: 1
            failureThreshold: 1
---
apiVersion: v1
kind: Service
metadata:
  name: http-server-waiting
  namespace: default
spec:
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: http
  selector:
    app: http-server-waiting
  type: ClusterIP
---
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: http-server-waiting
  namespace: default
spec:
  virtualHost:
    domains:
      - gloo-waiting.keda
    routes:
      - matchers:
          - prefix: /
        routeAction:
          single:
            kube:
              ref:
                name: http-server-waiting
                namespace: default
              port: 8080
